# Prismux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_PRISMUX.md  README_ZH.md  prismux-wg-manager.sh
.github/workflows/: nightly.yml  release.yml
docs/: README_EN.md  README_ZH.md  RESTful_en.md  RESTful_zh.md  auth_protocol_en.md  auth_protocol_zh.md  config_en.md  config_zh.md  filter_en.md  filter_zh.md  forward_en.md  forward_zh.md  ip_router_en.md  ip_router_zh.md  listen_en.md  listen_zh.md  load_balancer_en.md  load_balancer_zh.md  prismux_wireguard_en.md  prismux_wireguard_zh.md  protocol_detector_en.md  protocol_detector_zh.md  tcp_tunnel_forward_en.md  tcp_tunnel_forward_zh.md  tcp_tunnel_listen_en.md  tcp_tunnel_listen_zh.md
examples/: tcp_tunnel_client.yaml
h5/: index.html
metrics/: 20260223T140209Z.json  20260223T155135Z.json  20260223T170204Z.json  20260223T171356Z.json  20260223T174007Z.json  20260223T181501Z.json  20260223T182641Z.json  20260224T022902Z.json  20260224T043113Z.json  20260224T045948Z.json  20260224T052021Z.json  20260224T092826Z.json  20260224T100249Z.json  20260224T103021Z.json  latest.json
scripts/: compare_metrics.py  profile_auth_flame.sh  run_wsl_bench.sh
src/: api_server.rs  auth.rs  component.rs  config.rs  main.rs  packet.rs  protocol_detector.rs  router.rs  tcp_frame.rs  timefmt.rs
src/components/: filter.rs  forward.rs  ip_router.rs  listen.rs  load_balancer.rs  mod.rs  tcp_tunnel_forward.rs  tcp_tunnel_listen.rs
tests/integration/: run_iperf3_stability.py  udp_integration_rust.go  (+1 more)
