[package]
name = "prismux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aes-gcm = { version = "0.10", features = ["aes"] }
bytes = "1.8"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
evalexpr = "11.3"
flume = "0.11"
hmac = "0.12"
hex = "0.4"
ipnet = "2.10"
once_cell = "1.20"
num_cpus = "1.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
socket2 = "0.5"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
